# fsagent

./: .env.example  .gitignore  README.md  live_agent_smoke.py  pyproject.toml
.github/workflows/: tests.yml
agent/: __init__.py  schema.py  subagent.py  tools.py
cli/: models.py  repl.py
configs/: models.yaml  policy.yaml
core/: __init__.py  errors.py  friction.py  gitstage.py  pipeline.py  policy.py  sandbox.py  tiers.py  tool.py  tool_definition.py  trajectory.py
docs/: agent.md  architecture.md  failure-shaping.md  friction.md  functions.md  index.md  pipeline.md  policy.md  roadmap.md  testing.md  tiers-and-recovery.md  tool-declarations.md  trajectory.md
docs/tools/: append.md  copy.md  create_dir.md  delete.md  edit.md  glob.md  grep.md  index.md  inspect.md  list_dir.md  move.md  (+2 more)
functions/: __init__.py  mutate_content_ops.py  mutate_structure_ops.py  read_ops.py  search_ops.py
prompts/: subagent_system.md  system.md
tests/: test_append_tool.py  test_cli_models.py  test_copy_tool.py  test_create_dir_tool.py  test_delete_tool.py  test_edit_tool.py  test_friction.py  test_functions.py  test_gitstage.py  test_glob_tool.py  test_grep_tool.py  test_inspect_tool.py  test_list_dir_tool.py  test_move_tool.py  test_pipeline.py  test_policy.py  test_prompts.py  test_read_tool.py  test_repl.py  test_schema.py  test_subagent.py  test_tiers.py  test_tool_definition.py  test_tools.py  test_write_tool.py
tools/: __init__.py  append.py  common.py  copy.py  create_dir.py  delete.py  edit.py  glob.py  grep.py  inspect.py  list_dir.py  move.py  read.py  write.py
